--- a/app/src/main/res/layout/item_published_task.xml
+++ b/app/src/main/res/layout/item_published_task.xml
@@ -4,8 +4,8 @@
     android:layout_marginTop="8dp"
     app:divider_color="#e6e6e6"
     app:divider_size="2px"
-    app:enable_footer="true"
-    app:enable_header="true"
+    app:divider_top="true"
+    app:divider_bottom="true"
     android:orientation="vertical"
     android:background="#ffffff"
     android:layout_width="match_parent"
@@ -14,6 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        app:divider_bottom="true"
+        android:background="#ffffff"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
@@ -31,9 +33,9 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/btn_more"
             android:clickable="true"
-            android:background="?android:attr/selectableItemBackgroundBorderless">
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:id="@+id/btn_more">
 
             <ImageView
                 android:layout_width="24dp"
@@ -47,130 +49,119 @@
         </FrameLayout>
     </LinearLayout>
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/ll_container"
+        android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
-            android:orientation="vertical"
-            android:background="?android:attr/selectableItemBackground"
-            android:clickable="true"
-            android:id="@+id/ll_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-            <LinearLayout
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_location"
+                android:tint="#b9b9b9"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="起始地："
+                android:textSize="15sp"
+                android:textColor="@color/colorDarkGray"
+                android:gravity="center_vertical" />
+
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_location"
-                    android:tint="#b9b9b9"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="起始地："
-                    android:textSize="15sp"
-                    android:textColor="@color/colorDarkGray"
-                    android:gravity="center_vertical" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="天津"
-                    android:textSize="15sp"
-                    android:id="@+id/tv_start_spot"
-                    android:textColor="@color/colorDarkGray"
-                    android:gravity="center_vertical" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:orientation="horizontal"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_location"
-                    android:tint="#b9b9b9"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="目的地："
-                    android:textSize="15sp"
-                    android:textColor="@color/colorDarkGray"
-                    android:gravity="center_vertical" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:text="北京"
-                    android:textSize="15sp"
-                    android:id="@+id/tv_end_spot"
-                    android:textColor="@color/colorDarkGray"
-                    android:gravity="center_vertical" />
-
-            </LinearLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:src="@drawable/ic_task_detail"
-                    android:tint="#b9b9b9"
-                    android:padding="1dp"
-                    android:layout_marginTop="8dp"
-                    android:id="@+id/img_icon"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp" />
-
-                <TextView
-                    android:layout_toRightOf="@id/img_icon"
-                    android:layout_width="match_parent"
-                    android:textSize="15sp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/tv_transport_content"
-                    android:text="非常非常危险的化学品！"
-                    android:layout_marginTop="11dp"
-                    android:textColor="@color/colorDarkGray"/>
-
-            </RelativeLayout>
+                android:layout_height="match_parent"
+                android:text="天津"
+                android:textSize="15sp"
+                android:id="@+id/tv_start_spot"
+                android:textColor="@color/colorDarkGray"
+                android:gravity="center_vertical" />
 
         </LinearLayout>
 
-    </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_location"
+                android:tint="#b9b9b9"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="目的地："
+                android:textSize="15sp"
+                android:textColor="@color/colorDarkGray"
+                android:gravity="center_vertical" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="北京"
+                android:textSize="15sp"
+                android:id="@+id/tv_end_spot"
+                android:textColor="@color/colorDarkGray"
+                android:gravity="center_vertical" />
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/ic_task_detail"
+                android:tint="#b9b9b9"
+                android:padding="1dp"
+                android:layout_marginTop="8dp"
+                android:id="@+id/img_icon"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp" />
+
+            <TextView
+                android:layout_toRightOf="@id/img_icon"
+                android:layout_width="match_parent"
+                android:textSize="15sp"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_transport_content"
+                android:text="非常非常危险的化学品！"
+                android:layout_marginTop="11dp"
+                android:textColor="@color/colorDarkGray"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:text="2017年4月3日"
+            app:divider_top="true"
             android:id="@+id/tv_start_time"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"
@@ -178,5 +169,4 @@
             android:textColor="@color/colorLightGreen"
             android:gravity="center_vertical|right" />
 
-    </LinearLayout>
 </com.congxiaoyao.xber_admin.widget.XberDividerLayout>
