--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
 
     <android.support.v4.widget.DrawerLayout
         android:id="@+id/drawer_layout"
+        tools:openDrawer="start"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,10 +19,15 @@
                 android:id="@+id/loading_layout"
                 android:layout_height="match_parent">
 
-                <com.baidu.mapapi.map.TextureMapView
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:id="@+id/map_view"
+                    android:id="@+id/map_container"
                     android:layout_height="match_parent"/>
+
+                <!--<com.baidu.mapapi.map.TextureMapView-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:id="@+id/map_view"-->
+                    <!--android:layout_height="match_parent"/>-->
 
                 <com.congxiaoyao.xber_admin.widget.CustomViewPager
                     android:layout_alignParentTop="true"
