--- a/app/src/main/res/layout/item_search_car_bar.xml
+++ b/app/src/main/res/layout/item_search_car_bar.xml
@@ -22,7 +22,7 @@
                 android:orientation="vertical"
                 android:layout_height="match_parent">
 
-                <EditText
+                <com.congxiaoyao.xber_admin.widget.ClearableEditText
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
