--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,8 +50,8 @@
         <item name="android:dropDownHorizontalOffset">0dp</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
+        <item name="colorControlHighlight">@color/colorPrimary</item>
     </style>
 
     <style name="ProgressBarTheme" parent="AppTheme">
