动画调优 现在基本能看得过去啦！！

--- a/app/src/main/res/layout/activity_task_track.xml
+++ b/app/src/main/res/layout/activity_task_track.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="task"
-            type="com.congxiaoyao.xber_admin.publishedtask.bean.TaskAndDriver" />
+            type="com.congxiaoyao.xber_admin.publishedtask.bean.TaskRspAndDriver" />
     </data>
 
     <LinearLayout
