修复 动画中的小bug 优化 当前页面不是地图时则停掉车辆监控及动画 节省性能 添加 marker点击处理

--- a/app/src/main/res/layout/activity_driver_detail.xml
+++ b/app/src/main/res/layout/activity_driver_detail.xml
@@ -40,6 +40,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="17dp"
                         android:textSize="14sp"
+                        android:id="@+id/tv_car_plate"
                         android:textColor="#ffffff"
                         android:layout_gravity="center"
                         android:text="津A123456" />
