--- a/app/src/main/res/layout/item_search_bar.xml
+++ b/app/src/main/res/layout/item_search_bar.xml
@@ -35,6 +35,7 @@
                     <ImageView
                         android:layout_width="20dp"
                         android:layout_height="20dp"
+                        android:id="@+id/img_left_icon"
                         android:src="@drawable/icon_menu"
                         android:tint="@color/colorDarkGray" />
                 </LinearLayout>
