--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,8 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorControlHighlight">@color/colorPrimary</item>
-        <item name="android:windowIsTranslucent" >true</item>
         <item name="android:windowContentTransitions" >true</item>
+        <item name="android:windowIsTranslucent" >true</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -23,6 +23,12 @@
         <item name="colorPrimary">#fafafa</item>
         <item name="colorPrimaryDark">#fafafa</item>
         <item name="colorAccent">#fafafa</item>
+    </style>
+
+    <style name="AppTheme.Settings" parent="AppTheme">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
